kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sd-on-eks-compare-backend
  labels:
    app: sd-on-eks-compare-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sd-on-eks-compare-backend
  template:
    metadata:
      labels:
        app: sd-on-eks-compare-backend
    spec:
      serviceAccountName: sd-on-eks-compare-backend
      containers:
      - name: sd-on-eks-compare-backend
        image: 600413481647.dkr.ecr.us-west-2.amazonaws.com/sd-on-eks-compare/backend:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: sd-on-eks-compare-backend-service
  labels:
    app: sd-on-eks-compare-backend
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: sd-on-eks-compare-backend
