kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sd-on-eks-compare-frontend
  labels:
    app: sd-on-eks-compare-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sd-on-eks-compare-frontend
  template:
    metadata:
      labels:
        app: sd-on-eks-compare-frontend
    spec:
      serviceAccountName: sd-on-eks-compare-frontend
      containers:
      - name: sd-on-eks-compare-frontend
        image: 600413481647.dkr.ecr.us-west-2.amazonaws.com/sd-on-eks-compare/frontend:1.2
        imagePullPolicy: Always
        ports:
        - containerPort: 7890
---
apiVersion: v1
kind: Service
metadata:
  name: sd-on-eks-compare-frontend-service
  labels:
    app: sd-on-eks-compare-frontend
spec:
  type: ClusterIP
  ports:
  - port: 7890
    targetPort: 7890
    protocol: TCP
  selector:
    app: sd-on-eks-compare-frontend
